--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/main.css">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Four card feature section</title>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <div class="main">
+        <div class="container">
+            <h1 class="title">Reliable, efficient delivery</h1>
+            <h1 class="subtitle">Powered by Technology</h1>
+            <p>
+                Our Artificial Intelligence powered tools use millions of project data<br />
+                points to ensure that your project is successful
+            </p>
+        </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <div class="row">
+            <div class="columm">
+                <div class="card">
+                    <h4>Supervisor</h4>
+                    <p>Monitors activity to identify project roadblocks</p>
+                </div>
+            </div>
+            <div class="columm"></div>
+            <div class="columm"></div>
+        </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <footer>
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://marcomartinez.dev/" target="_blank">Marco Martinez</a>.
+        </p>
+    </footer>
 </body>
+
 </html>
