--- a/index.html
+++ b/index.html
@@ -26,13 +26,43 @@
 
         <div class="row">
             <div class="columm">
-                <div class="card">
+                <div class="card" style="border-top: 4px solid hsl(180, 62%, 55%);">
                     <h4>Supervisor</h4>
-                    <p>Monitors activity to identify project roadblocks</p>
+                    <p class="card-text">
+                        Monitors activity to identify project <br />
+                        roadblocks
+                    </p>
+                    <img src="./images/icon-supervisor.svg" alt="supervisor">
                 </div>
             </div>
-            <div class="columm"></div>
-            <div class="columm"></div>
+            <div class="columm">
+                <div class="card" style="border-top: 4px solid hsl(0, 78%, 62%);">
+                    <h4>Team Builder</h4>
+                    <p class="card-text">
+                        Scans our talent network to create the <br />
+                        optimal team for your project
+                    </p>
+                    <img src="./images/icon-team-builder.svg" alt="supervisor">
+                </div>
+                <div class="card" style="border-top: 4px solid hsl(34, 97%, 64%);">
+                    <h4>Karma</h4>
+                    <p class="card-text">
+                        Regularly evaluates our talent to ensure <br />
+                        quality
+                    </p>
+                    <img src="./images/icon-karma.svg" alt="supervisor">
+                </div>
+            </div>
+            <div class="columm">
+                <div class="card" style="border-top: 4px solid hsl(212, 86%, 64%);">
+                    <h4>Calculator</h4>
+                    <p class="card-text">
+                        Uses data from past projects to provide <br />
+                        better delivery estimates
+                    </p>
+                    <img src="./images/icon-calculator.svg" alt="supervisor">
+                </div>
+            </div>
         </div>
 
     </div>
