--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="title">Reliable, efficient delivery</h1>
             <h1 class="subtitle">Powered by Technology</h1>
             <p>
-                Our Artificial Intelligence powered tools use millions of project data<br />
+                Our Artificial Intelligence powered tools use millions of project data
                 points to ensure that your project is successful
             </p>
         </div>
