--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <h1 class="title">Reliable, efficient delivery</h1>
             <h1 class="subtitle">Powered by Technology</h1>
-            <p>
+            <p class="opening-text">
                 Our Artificial Intelligence powered tools use millions of project data
                 points to ensure that your project is successful
             </p>
